Add isPaper boolean